# agent-skills

./: .gitignore  CLAUDE.md  README.md  SKILL_AUTHORING.md  SKILL_DEDUP_ANALYSIS.md
.github/workflows/: dispatch-agent-skills-io.yml  sync-ai-model-gateway-skills.yaml  sync-financial-and-data-skills.yaml  sync-financial-data-skills.yaml  sync-marketing-skills.yaml  sync-marketpulse-skills.yaml  sync-search-and-research-skills.yaml  (+1 more)
cn-llm/: SKILL.md
crypto-market-data/: SKILL.md
dome-api/: SKILL.md
gmail-lead-desk/: SKILL.md
last30days/: README.md  SKILL.md  pyproject.toml
last30days/scripts/: last30days.py  run-last30days.sh  test-aisa-planner.py  test-aisa-provider.py
last30days/scripts/lib/: aisa.py  dates.py  env.py  github.py  normalize.py  pipeline.py  providers.py  quality_nudge.py  reddit_public.py  render.py  resolve.py  setup_wizard.py  signals.py  ui.py
llm-router/: SKILL.md
market/: SKILL.md
marketpulse/: README.md  SKILL.md  earnings-press-releases-tickers.md
media-gen/: README.md  SKILL.md
multi-source-search/: README.md  SKILL.md
notion-workspace/: SKILL.md
openclaw-skills/: README.md  restructuring_plan.md
perplexity-search/: README.md  SKILL.md
prediction-market/: SKILL.md
prediction-market-arbitrage/: README.md  SKILL.md  skill.md
prediction-market-data/: README.md  SKILL.md
saas-gateway/: SKILL.md
search/: SKILL.md
seo-keyword-research/: SKILL.md
trend-forecast/: SKILL.md
twitter/: README.md  SKILL.md
twitter-autopilot/: README.md  SKILL.md
youtube/: SKILL.md
youtube-serp/: README.md  SKILL.md
(+9 files in other folders)
