[project]
name = "last30days-skill"
version = "1.0.4"
description = "AISA-only multi-source last-30-days research skill"
readme = "README.md"
requires-python = ">=3.12"
# No runtime dependencies — the skill runs on Python stdlib only
# (urllib via scripts/lib/http.py, sqlite3, email.utils, etc.).
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-q",
  "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["scripts", "tests"]
omit = [
  "scripts/lib/vendor/*",
  "dist/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = [
  "scripts/lib/vendor/*",
  "dist/*",
]

